k8s/local/ns-main-service/db.yaml
# PostgreSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre-main
  template:
    metadata:
      labels:
        app: postgre-main
    spec:
      containers:
        - name: postgre-main
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgre-main-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgre-main-storage
          persistentVolumeClaim:
            claimName: postgre-main-pvc
---
# PostgreSQL Service (Renamed to db-contracts)
apiVersion: v1
kind: Service
metadata:
  name: postgre-main
spec:
  selector:
    app: postgre-main
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP  # Exposes PostgreSQL within the cluster
