k8s/local/ns-main-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns-main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - node-sample.local
      secretName: tls-secret
  rules:
    - host: node-sample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ns-main-service
                port:
                  number: 80
